<?xml version="1.0"?>
<package format="3">
  <name>ccp_js_node</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for joystick control and navigation.</description>
  <maintainer email="eddie@example.com">Eddie</maintainer>
  <license>BSD</license>  <!-- or your preferred license -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>ros2launch</depend> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
